<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:text="Email (Please follow the format xxx@xxx.com)"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_width="wrap_content"
        android:text="Password (Must have more than six characters)"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_width="wrap_content"
        android:text="Name"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:text="College"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etCollege"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_width="wrap_content"
        android:text="Major"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etMajor"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:text="Previous GPA (If you are a freshman or don't know your previous GPA, please enter 4.0) "
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etGPA"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_width="wrap_content"
        android:text="Previous Unit (Any P/NP unit should be included) "
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etUnit"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Current Term (For example: Winter 2016)"/>

    <EditText
        android:id="@+id/etCurrentTerm"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"/>


    <Button
        android:id="@+id/bRegister"
        android:text ="Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</LinearLayout>



