...
        android:layout_height="239.8dp"
        android:layout_gravity="top|center"
        android:src="@mipmap/homepage_pic"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/EmailOption"
        android:layout_width="wrap_content"
        android:text="Email"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:inputType="textEmailAddress"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/PasswordOption"
        android:layout_width="wrap_content"
        android:text="Password"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bLogin"
        android:text ="Login"
        android:background ="@color/colorPrimary"

        android:textColor="@color/colorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id= "@+id/tvRegisterLink"
        android:layout_width="wrap_content"
        android:textColor="@color/colorSecondaryText"
        android:textSize="10sp"
        android:layout_marginTop="10dp"
        android:text="New User? Register HERE!"
        android:layout_gravity="right"
...
