...
        android:id="@+id/list_homepage"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/linearLayout"></ListView>

    <TextView
        android:id="@+id/GPAtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="GPA"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="60dp"
        android:layout_alignTop="@+id/progressBar2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/GPAnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="40sp"
        android:text="4.0"
        android:textColor="#DC143C"
...
